welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking && hour=<6) {
		return true;
	}
	else if (talking && hour>20) {
		return true;
	}
	else return false;
}
